@@ -14,6 +14,9 @@ import CarShop.repositories.UserRepository;
 import CarShop.services.Interf.ModelService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
@@ -21,6 +24,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@EnableCaching
 public class ModelServiceImpl implements ModelService {
 
     private final ModelMapper modelMapper;
@@ -54,6 +58,7 @@ public class ModelServiceImpl implements ModelService {
         this.userRepository = userRepository;
     }
 
+    @CacheEvict(cacheNames = "models", allEntries = true)
     @Override
     public void addModel(ModelDTO modelDTO) {
         System.out.println(modelDTO);
@@ -64,27 +69,30 @@ public class ModelServiceImpl implements ModelService {
         modelRepository.save(newModel);
     }
 
+    @CacheEvict(cacheNames = "models", allEntries = true)
     @Override
     public void deleteModel(String id) {
         modelRepository.deleteById(id);
     }
 
+    @CacheEvict(cacheNames = "models", allEntries = true)
     @Override
     public void deleteAllModels() {
         modelRepository.deleteAll();
     }
 
+    @Cacheable("models")
     @Override
     public List<ModelDTO> allModelsNotBasket() {
-        return modelRepository.findAllByActive("In Basket").stream().map((model) -> modelMapper.map(model, ModelDTO.class)).toList();
+        return modelRepository.findAllByActive("In Basket").stream().map((model) -> modelMapper.map(model, ModelDTO.class)).collect(Collectors.toList());
     }
-
 
     @Override
     public ModelDTO getModelById(String id) {
         return modelMapper.map(modelRepository.findById(id), ModelDTO.class);
     }
 
+    @CacheEvict(cacheNames = "models", allEntries = true)
     @Override
     public void modelActive(String id, String login) {
         Model oldModel = modelRepository.findById(id).orElse(null);
@@ -97,8 +105,16 @@ public class ModelServiceImpl implements ModelService {
         }
     }
 
+    @CacheEvict(cacheNames = "models", allEntries = true)
     @Override
     public void deleteAllModelsByActive() {
         modelRepository.deleteAllByActive("In Basket");
+    }
+
+    @CacheEvict(cacheNames = "models", allEntries = true)
+    @Override
+    public void updateModel(ModelDTO modelDTO) {
+        Brand brand = brandRepository.findBrandByName(modelDTO.brand.getName()).orElse(null);
+        modelRepository.updateModel(modelDTO.id, LocalDateTime.now(), brand, modelDTO.name, modelDTO.category, modelDTO.transmission, modelDTO.engine, modelDTO.price);
     }
 }
